# agentsift

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  detection_rule.md  feature_request.md
.github/workflows/: ci.yml
rules/examples/: crypto-theft.yaml  mcp-tool-poisoning.yaml
sandbox/: Dockerfile  runner.py
src/agentsift/: __init__.py  cli.py  ignore.py  models.py
src/agentsift/analyzers/: __init__.py  metadata.py  sandbox.py  static.py
src/agentsift/reporters/: __init__.py  cyclonedx.py  sarif.py
src/agentsift/rules/: __init__.py  engine.py
src/agentsift/scanners/: __init__.py  clawhub.py  local.py  npm.py  pypi.py  registry.py
tests/: test_clawhub_scanner.py  test_cyclonedx.py  test_ignore.py  test_metadata_analyzer.py  test_npm_scanner.py  test_pypi_scanner.py  test_rule_engine.py  test_sandbox.py  test_sarif.py  test_scanner.py  test_static_analyzer.py
