[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsift"
version = "0.1.0"
description = "Security scanner for AI agent plugins, skills, and MCP packages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AgentSift Contributors" },
]
keywords = ["security", "ai-agent", "mcp", "supply-chain", "scanner", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
sandbox = [
    "docker>=7.0",
]

[project.scripts]
agentsift = "agentsift.cli:main"

[project.urls]
Homepage = "https://github.com/koach08/agentsift"
Repository = "https://github.com/koach08/agentsift"
Issues = "https://github.com/koach08/agentsift/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
